# invoice

./: Cargo.toml  README.md  invoice-2022-001.html  invoice.html.hbs  invoice.yaml
pandoc-tests/csv-to-md/: table.csv  table.md
pandoc-tests/html-to-pdf/: invoice.html  invoice_2022-001.html  style.css  template-example.html  template.html
pandoc-tests/md-to-html/: test.html  test.md
src/: main.rs
